--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^5.1.3",
     "eslint": "^4.18.1",
     "express": "^4.16.2",
+    "helmet": "^3.13.0",
     "mongoose": "^5.2.7",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2"
